Fix CSS inconsistencies on mobile views

--- a/assets/stylesheets/config.scss
+++ b/assets/stylesheets/config.scss
@@ -4,6 +4,7 @@
 $phone-wide: "only screen and (min-width: 380px)";
 $tablet: "only screen and (min-width: 570px)";
 $tablet-wide: "only screen and (min-width: 768px)";
+$tablet-extra-wide: "only screen and (min-width: 960px)";
 $desktop: "only screen and (min-width: 1150px)";
 
 // Fonts ----------------------------------------------------------------------
