--- a/client/components/app/styles.scss
+++ b/client/components/app/styles.scss
@@ -1,11 +1,15 @@
 .app {
 	display: flex;
 	flex-direction: column;
-	padding: 80px 0 0;
+	padding: 80px 0 25px;
 	width: 100%;
 
 	@media #{$tablet-wide} {
-		padding: 80px 325px 0 25px;
+		padding: 105px 50px 25px;
+	}
+
+	@media #{$tablet-extra-wide} {
+		padding: 105px 350px 25px 50px;
 	}
 
 	@media #{$desktop} {
