--- a/client/components/post-footer/styles.scss
+++ b/client/components/post-footer/styles.scss
@@ -4,7 +4,7 @@
   padding: 0 25px;
   width: 100%;
 
-  @media #{$desktop} {
+  @media #{$tablet-wide} {
     padding: 0;
   }
 }
